test/fail/undefined_function.zn
# ERRORS: 2
func main() {
  var x = no_such_func(42)
  0
}
